redesign/css/cyclescape.css
/* ... */
h1 {color: #AC3E27; font-weight: 500;}
h2 {color: #185B3D; font-weight: 500; font-size: 20px; width: fit-content;}
h3 {color: #185B3D; font-size: 20px; margin: 20px 0;}
h3, h4, h5, h6, body, input, select, textarea, label {color: #212322;}
input, select, textarea {font-size: 15px;}
.drop-cap:first-letter {color: #AC3E27;}
.italic {font-style: italic;}
p.light {font-weight: 300;}

.drop-cap:first-child:first-letter {color: #AC3E27; float: left; line-height: 60px; padding-top: 4px; padding-right: 8px; padding-left: 3px;}
p.drop-cap:first-child:first-letter {font-size: 75px;}
h3.drop-cap:first-child:first-letter {font-size: 62px; line-height: 42px;}
a.text {color: #AC3E27;}

html.fa-events-icons-loading .fa-fw {display: inline-block; width: 1.28571429em;;}
html.fa-events-icons-loading .fa-fw::before {content: "\00a0";}
html.fa-events-icons-loading body {
    display: none;
}


/* Basic layout */
html, body {height: 100%;}
body {display: flex; flex-direction: row; flex-wrap: wrap; width: 100%; padding: 10px; margin: 0;}
#content {display: flex; flex-direction: column; flex-basis: 100%; flex: 1; margin-top: 50px; margin-left: 250px; padding: 10px; max-width: 1300px;}
#shade {display: none; width: 100%; height: 100%; position: fixed; z-index: 100; -webkit-backdrop-filter: blur(3px); backdrop-filter: blur(3px); background-color:rgba(0, 0, 0, 0.158); margin-left: -10px; margin-top: -10px;}
#shade.white {background-color:rgba(255, 255, 255, 0.897); -webkit-backdrop-filter: blur(5px); backdrop-filter: blur(5px);}
#shade i.close {display: none; position: fixed; right: 0; padding: 5px; margin: 10px 5px; font-size: 25px; color: #c76a58; cursor: pointer;}
#shade.white i.close {display: inline-block;}

.title-wrapper {display: flex; flex-direction: row; flex-wrap: wrap; width: 100%;}
.title-wrapper .section-title {flex-direction: column; flex: 3; padding: 10px; margin-right: 40px; align-items: center; justify-content: center;}
.title-wrapper .section-title h1, .title-wrapper .section-title p.badge {display: inline-block; width: fit-content;}
.title-wrapper .section-title p.badge {background-color: #eeeeee; color: #AC3E27; padding: 10px; border-radius: 25px; margin: 0 20px; font-size: 18px; font-weight: 300; align-self: center;}
.title-wrapper .action-buttons {display: flex; padding: 10px; max-width: 400px;}

.content-wrapper {display: flex; flex-direction: row; flex-wrap: wrap; width: 100%;}
.main-content {flex-direction: column; flex: 2; padding: 10px; margin-right: 40px;}
.main-content.full-screen {margin: 0 10px; height: calc(100vh - 245px); border-radius: 25px; padding: 0;}
.side-content {display: flex; flex-direction: column; flex: 1; padding: 10px; max-width: 300px; z-index: 101;}

.show-side-content, .show-map-controls {display: none; position: fixed; bottom: 0; right: 5%; padding: 10px; margin: 10px auto; border-radius: 25px; color: white; font-size: 100%; height: 50px; border: none; outline: none; background-color: #AC3E27; box-shadow: 0 3px 8px 0 rgba(0,0,0,0.12), 0 3px 1px 0 rgba(0,0,0,0.04); transition: 0.2s; line-height: 1; z-index: 98}
.show-side-content:hover, .show-map-controls:hover {background-color: #c76a58;}
.show-map-controls, .show-side-content {z-index: 102;}

.unstyled {text-decoration: none;}
.padding {padding: 10px;}
.inline {display: inline;}
.centered {align-self: center;}
.text-centered {text-align: center;}
.flex {display: flex; flex-direction: row; justify-content: center; flex-wrap: wrap;}

.full-map {width: 100%; border-radius: 25px;}
.map-controls {float: right; background-color: rgba(255, 255, 255, 0.871); -webkit-backdrop-filter: blur(5px); backdrop-filter: blur(5px); border-radius: 25px; padding: 0 10px 10px; margin: 5px;}
.map-controls.left {float: left;}
.map-controls h2 {padding: 10px; text-align: center; margin: 0 auto;}

#top-menu {display: none; position: fixed; z-index: 98; width: 100%; height: 75px; margin-left: -10px; margin-top: -10px; background-color: rgba(255, 255, 255, 0.671); -webkit-backdrop-filter: blur(5px); backdrop-filter: blur(5px); flex-direction: column; box-shadow: 0 3px 8px 0 rgba(0,0,0,0.12), 0 3px 1px 0 rgba(0,0,0,0.04);}
#top-menu h1 {display: block; margin: auto; font-style: italic; font-size: 35px;}
#top-menu img {width: 30px;}


/* Nav */
nav {position: fixed; display: flex; flex-direction: column; flex-basis: 100%; flex: 1; background-color: #eeeeee; height: calc(100vh - 20px); max-width: 260px; border-radius: 25px; box-shadow: 2px 6px 12px -7px rgba(0,0,0,0.75); z-index: 103; min-height: 600px; overflow-y: scroll;}
nav hr {color: white; margin: 12.5px 0 12.5px -10px; height: 2px !important; opacity: .6; width: calc(100% + 20px);}
nav .title img {width: 30px; margin-top: -16px;}
nav .title h1 {display: inline; font-style: italic; font-size: 35px;}
nav .title p {font-style: italic; font-size: 14px; color: #AC3E27; margin-left: 35px;}
nav i {padding-left: 10px; padding-right: 30px; color: #939393; font-size: 20px; width: 40px; height: 20px; line-height: 20px;}
nav ul {list-style-type: none; padding: 0; margin: 0;}
nav ul a {text-decoration: none;}
nav li {padding: 10px 2.5px; margin: 5px 0; color: #185B3D; border-radius: 25px; font-size: 17px; cursor: pointer;}
nav li.active {background-color: #FFFFFF; box-shadow: 0 3px 8px 0 rgba(0,0,0,0.12), 0 3px 1px 0 rgba(0,0,0,0.04);}
nav li:hover {background-color: #ffffffa6;}
nav select {appearance: none; -webkit-appearance: none; outline: 0; border: none; background-color: #eeeeee; color: #185B3D; font-size: 17px; cursor: pointer; width: 190px; padding: 10px 5px; margin: 2.5px 0; border-radius: 25px;}
nav select:hover {background-color: #ffffffa6;}
nav .padding-fill {height: 20%;}
/* ... */

